<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/splashFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.frekanstan.gateway_mobil.view.login.LoginFragment"
        tools:layout="@layout/login_fragment">
        <action
            android:id="@+id/action_loginFragment_to_mainMenuFragment"
            app:destination="@id/mainMenuFragment" />
    </fragment>
    <fragment
        android:id="@+id/splashFragment"
        android:name="com.frekanstan.gateway_mobil.view.login.SplashFragment"
        tools:layout="@layout/fragment_splash">
        <action
            android:id="@+id/action_splashFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@+id/splashFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/assetDetailsFragment"
        android:name="com.frekanstan.gateway_mobil.view.assetdetails.AssetDetailsFragment"
        tools:layout="@layout/asset_details_fragment">
        <argument
            android:name="assetId"
            app:argType="long" />
        <action
            android:id="@+id/action_assetDetailsFragment_to_assetImagePagerFragment"
            app:destination="@id/assetImagePagerFragment" />
        <action
            android:id="@+id/action_assetDetailsFragment_to_assignmentDialogFragment"
            app:destination="@id/assignmentDialogFragment" />
        <action
            android:id="@+id/action_assetDetailsFragment_to_tagFinderDialogFragment"
            app:destination="@id/tagFinderDialogFragment" />
    </fragment>
    <fragment
        android:id="@+id/personListFragment"
        android:name="com.frekanstan.gateway_mobil.view.personlist.PersonListFragment"
        android:label="@string/employee_list"
        tools:layout="@layout/person_list_fragment">
        <action
            android:id="@+id/action_personListFragment_to_personImageFragment"
            app:destination="@id/personImageFragment" />
        <action
            android:id="@+id/action_personListFragment_to_countingTabsFragment"
            app:destination="@id/countingTabsFragment" />
        <argument
            android:name="operation"
            app:argType="string" />
        <action
            android:id="@+id/action_personListFragment_to_labelingTabsFragment"
            app:destination="@id/labelingTabsFragment" />
    </fragment>
    <fragment
        android:id="@+id/assetImagePagerFragment"
        android:name="com.frekanstan.gateway_mobil.view.assetimage.AssetImagePagerFragment"
        tools:layout="@layout/asset_image_pager">
        <argument
            android:name="mAssetCode"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.frekanstan.gateway_mobil.view.settings.SettingsFragment"
        android:label="@string/settings" />
    <fragment
        android:id="@+id/assetTypeListFragment"
        android:name="com.frekanstan.gateway_mobil.view.assettypetree.AssetTypeTreeFragment"
        android:label="@string/type_list"
        tools:layout="@layout/asset_type_list_fragment">
        <action
            android:id="@+id/action_assetTypeListFragment_to_countingTabsFragment"
            app:destination="@id/countingTabsFragment" />
        <argument
            android:name="operation"
            app:argType="string" />
        <action
            android:id="@+id/action_assetTypeListFragment_to_labelingTabsFragment"
            app:destination="@id/labelingTabsFragment" />
    </fragment>
    <fragment
        android:id="@+id/locationListFragment"
        android:name="com.frekanstan.gateway_mobil.view.locationlist.LocationListFragment"
        android:label="@string/location_list"
        tools:layout="@layout/location_list_fragment">
        <action
            android:id="@+id/action_locationListFragment_to_countingTabsFragment"
            app:destination="@id/countingTabsFragment" />
        <argument
            android:name="operation"
            app:argType="string" />
        <action
            android:id="@+id/action_locationListFragment_to_labelingTabsFragment"
            app:destination="@id/labelingTabsFragment" />
    </fragment>
    <fragment
        android:id="@+id/personImageFragment"
        android:name="com.frekanstan.gateway_mobil.view.personlist.PersonImageFragment"
        tools:layout="@layout/person_image_fragment">
        <argument
            android:name="personId"
            app:argType="long" />
    </fragment>
    <dialog
        android:id="@+id/assignmentDialogFragment"
        android:name="com.frekanstan.gateway_mobil.view.assignmentdialog.AssignmentDialogFragment"
        android:label="@string/assign"
        tools:layout="@layout/assignment_dialog" >
        <argument
            android:name="assetId"
            app:argType="long"
            android:defaultValue="0L" />
        <argument
            android:name="personId"
            app:argType="long"
            android:defaultValue="0L" />
        <argument
            android:name="locationId"
            app:argType="long"
            android:defaultValue="0L" />
        <argument
            android:name="assetIds"
            app:argType="long[]" />
    </dialog>
    <fragment
        android:id="@+id/assetListFragment"
        android:name="com.frekanstan.gateway_mobil.view.assetlist.AssetListFragment"
        android:label="@string/asset_list"
        tools:layout="@layout/asset_list_fragment">
        <action
            android:id="@+id/action_assetListFragment_to_assetDetailsFragment"
            app:destination="@id/assetDetailsFragment" />
        <argument
            android:name="assetTypeId"
            android:defaultValue="0L"
            app:argType="long" />
        <argument
            android:name="locationId"
            android:defaultValue="0L"
            app:argType="long" />
        <argument
            android:name="personId"
            android:defaultValue="0L"
            app:argType="long" />
        <argument
            android:name="storageId"
            android:defaultValue="0L"
            app:argType="long" />
        <argument
            android:name="assetId"
            android:defaultValue="0L"
            app:argType="long" />
        <action
            android:id="@+id/action_assetListFragment_to_assignmentDialogFragment"
            app:destination="@id/assignmentDialogFragment" />
        <action
            android:id="@+id/action_assetListFragment_to_assetImagePagerFragment"
            app:destination="@id/assetImagePagerFragment" />
        <argument
            android:name="operation"
            app:argType="string"
            app:nullable="true" />
    </fragment>
    <dialog
        android:id="@+id/tagFinderDialogFragment"
        android:name="com.frekanstan.asset_management.view.tracking.TagFinderDialogFragment"
        android:label="dialog_tag_finder"
        tools:layout="@layout/tag_finder_dialog">
    </dialog>
    <fragment
        android:id="@+id/mainMenuFragment"
        android:name="com.frekanstan.gateway_mobil.view.mainmenu.MainMenuFragment"
        android:label="@string/main_menu">
        <action
            android:id="@+id/action_mainMenuFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
        <action
            android:id="@+id/action_mainMenuFragment_to_mainMenuLabelingFragment"
            app:destination="@id/mainMenuLabelingFragment" />
        <action
            android:id="@+id/action_mainMenuFragment_to_locateRfidFragment"
            app:destination="@id/locateRfidFragment" />
        <action
            android:id="@+id/action_mainMenuFragment_to_countingOpListFragment"
            app:destination="@id/countingOpListFragment" />
        <action
            android:id="@+id/action_mainMenuFragment_to_receiptListFragment"
            app:destination="@id/receiptListFragment" />
    </fragment>
    <fragment
        android:id="@+id/countingTabsFragment"
        android:name="com.frekanstan.gateway_mobil.view.tracking.CountingTabsFragment"
        android:label="@string/counting_op" >
        <argument
            android:name="operation"
            app:argType="string"
            android:defaultValue="counting" />
        <action
            android:id="@+id/action_countingTabsFragment_to_countingReportFragment"
            app:destination="@id/countingReportFragment" />
    </fragment>
    <fragment
        android:id="@+id/mainMenuLabelingFragment"
        android:name="com.frekanstan.gateway_mobil.view.mainmenu.MainMenuLabelingFragment"
        android:label="@string/labeling" >
        <action
            android:id="@+id/action_mainMenuLabelingFragment_to_labelingTabsFragment"
            app:destination="@id/labelingTabsFragment" />
        <action
            android:id="@+id/action_mainMenuLabelingFragment_to_mainMenuAssetLabelingFragment"
            app:destination="@id/mainMenuAssetLabelingFragment" />
    </fragment>
    <fragment
        android:id="@+id/labelingTabsFragment"
        android:name="com.frekanstan.gateway_mobil.view.labeling.LabelingTabsFragment"
        android:label="@string/labeling" >
        <argument
            android:name="operation"
            app:argType="string"
            android:defaultValue="labeling" />
    </fragment>
    <fragment
        android:id="@+id/mainMenuAssetLabelingFragment"
        android:name="com.frekanstan.gateway_mobil.view.mainmenu.MainMenuAssetLabelingFragment"
        android:label="@string/asset_labeling">
        <action
            android:id="@+id/action_mainMenuAssetLabelingFragment_to_locationListFragment"
            app:destination="@id/locationListFragment">
            <argument
                android:name="operation"
                android:defaultValue="labeling" />
        </action>
        <action
            android:id="@+id/action_mainMenuAssetLabelingFragment_to_assetTypeListFragment"
            app:destination="@id/assetTypeListFragment">
            <argument
                android:name="operation"
                android:defaultValue="labeling" />
        </action>
        <action
            android:id="@+id/action_mainMenuAssetLabelingFragment_to_personListFragment"
            app:destination="@id/personListFragment">
            <argument
                android:name="operation"
                android:defaultValue="labeling" />
        </action>
        <action
            android:id="@+id/action_mainMenuAssetLabelingFragment_to_labelingTabsFragment"
            app:destination="@id/labelingTabsFragment">
            <argument
                android:name="operation"
                android:defaultValue="labeling" />
        </action>
    </fragment>
    <fragment
        android:id="@+id/locateRfidFragment"
        android:name="com.frekanstan.gateway_mobil.view.tracking.LocateRfidFragment"
        android:label="@string/locate" />
    <fragment
        android:id="@+id/countingOpListFragment"
        android:name="com.frekanstan.gateway_mobil.view.countingops.CountingOpListFragment"
        android:label="@string/counting_ops">
        <action
            android:id="@+id/action_countingOpListFragment_to_countingTabsFragment"
            app:destination="@id/countingTabsFragment" />
        <action
            android:id="@+id/action_countingOpListFragment_to_countingReportFragment"
            app:destination="@id/countingReportFragment" />
    </fragment>
    <fragment
        android:id="@+id/countingReportFragment"
        android:name="com.frekanstan.gateway_mobil.view.tracking.CountingReportFragment"
        android:label="@string/counting_report" >
        <argument
            android:name="countingOpId"
            app:argType="long" />
    </fragment>
    <fragment
        android:id="@+id/receiveAssetsFragment"
        android:name="com.frekanstan.gateway_mobil.view.gateway.ReceiveAssetsFragment"
        android:label="@string/product_list_title">
        <action
            android:id="@+id/action_receiveAssetsFragment_to_receiveReportFragment"
            app:destination="@id/receiveReportFragment" />
    </fragment>
    <fragment
        android:id="@+id/receiveReportFragment"
        android:name="com.frekanstan.gateway_mobil.view.gateway.ReceiveReportFragment"
        android:label="@string/asset_type_list_title" >
        <action
            android:id="@+id/action_receiveReportFragment_to_receiveAssetsFragment"
            app:destination="@id/receiveAssetsFragment" />
    </fragment>
    <fragment
        android:id="@+id/receiptListFragment"
        android:name="com.frekanstan.gateway_mobil.view.gateway.ReceiptListFragment"
        android:label="@string/receipt_list_title">
        <action
            android:id="@+id/action_receiptListFragment_to_receiveAssetsFragment"
            app:destination="@id/receiveAssetsFragment" />
    </fragment>
</navigation>