<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/counting_card_body_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@color/grey_200"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/counting_card_icon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/image_desc"
                android:padding="@dimen/margin_medium"
                android:scaleType="fitCenter" />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/counting_card_info_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="@dimen/margin_small">

            <TextView
                android:id="@+id/counting_card_title"
                style="@style/TitleText" />

            <TextView
                android:id="@+id/counting_card_id"
                style="@style/PlainTextSingleLine"
                android:drawableStart="@drawable/hash_gray_24"
                android:drawablePadding="@dimen/margin_small" />

            <com.daimajia.numberprogressbar.NumberProgressBar
                android:id="@+id/counting_card_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginEnd="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_small"
                custom:progress_reached_bar_height="3dp"
                custom:progress_text_size="13sp"
                custom:progress_unreached_bar_height="2dp"
                custom:progress_unreached_color="#CCCCCC" />

        </LinearLayout>
    </LinearLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.frekanstan.asset_management.app.helpers.IconTabLayout
            android:id="@+id/tab_layout"
            style="@style/Widget.MaterialComponents.TabLayout.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/counted"
                android:icon="@drawable/tick_green_48" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_counted"
                android:icon="@drawable/notcounted_gray_48" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/foreign"
                android:icon="@drawable/help_48px_orange" />

        </com.frekanstan.asset_management.app.helpers.IconTabLayout>

    </androidx.viewpager.widget.ViewPager>
</LinearLayout>